# BackEnd

./: CMakeLists.txt  vio.cpp
app/: CMakeLists.txt  curve_fitting.cpp  curve_fitting_by_ceres.cpp
backend/: CMakeLists.txt  backend.h  edge.cpp  edge.h  problem.cpp  problem.h  vertex.cpp  vertex.h
backend_ceres/: backend_ceres.h
